--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </form>
             <div class="weather-picture text-center my-2">
                 <img v-show="weatherImg" :src="[weatherImg]" alt="[weatherImg]">
-                <h2 class="">{{temperature}}</h2>
+                <h2 class="my-3">{{temperature}}</h2>
                 <span class="my-4">{{humidity}}</span>
                 <h4 class="my-4">{{returnCity}}</h4>
                 <div>
